Adiciona paginação
