# src/main/webui/docs/openapi.yaml
@@ -32,7 +32,7 @@ paths:
         description: The size of page
         schema:
           format: int32
-          default: 10
+          default: 100
           type: integer
       - name: sortcolumn
         in: query
@@ -190,7 +190,7 @@ paths:
         description: The size of page
         schema:
           format: int32
-          default: 10
+          default: 100
           type: integer
       - name: sortcolumn
         in: query
